--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -17,15 +17,17 @@
   {% endif %}
 
   {% for publication in publications.papers %}
+  <a href="{{ publication.link }}" target="_blank">
   <div class="item">
     {% if publication.link %}
-      <li><a href="{{ publication.link }}">{{ publication.title }}</a></li>
+      <li>{{ publication.date }}</li>
     {% else %}
-      <li>{{ publication.title }}</li>
+      <li>{{ publication.date }}</li>
     {% endif %}
-    <div class="publication-authors">{{ publication.authors }}</div>
-    <div class="publication-conference">{{ publication.conference }}</div>
-  </div><!--//item-->
+    <div class="publication-authors">{{ publication.title }}</div>
+    <div class="publication-conference">{{ publication.displayurl }}</div>
+  </div>
+  </a><!--//item-->
   {% endfor %}
 
 </section><!--//section-->
